# Rust-smartcontract

./: Cargo.toml  build.sh
FungibleToken/: Cargo.toml
FungibleToken/src/: lib.rs
neardev/: dev-account  dev-account.env
res/: defi.wasm  fungible_token.wasm
test-contract-defi/: Cargo.toml
